# rust-hft-arbitrage-lab

./: .gitignore  API_KEYS_MIGRATION.md  Cargo.toml  Dockerfile  Dockerfile.tick  FINNHUB_USAGE.md  IMPLEMENTATION_SUMMARY.md  KRAKEN_WEBSOCKET_GUIDE.md  Makefile  PROJECT_CLEANUP.md  QUICK_CONFIG.md  QUICK_START.md  README.md  api_keys.properties.example  dev.sh  docker-compose.yml  restore_from_bak.sh  setup_project.sh  test_api_keys.py  test_websocket.py  write_cargo_tomls.sh
.github/workflows/: build_and_package.yml  release.yml
app/: streamlit_app.py  streamlit_strategies.py
data/: eth_ohlcv.csv  sample_market.csv
docker/: requirements.txt
examples/notebooks/: hawkes_modeling.ipynb  market_making.ipynb  market_making_imbalance.ipynb  pair_trading_optimal.ipynb  portfolio_hedging.ipynb  price_discovery.ipynb  signature_optimal_stopping.ipynb  stat_arb_pairs.ipynb  triangular_arbitrage.ipynb  triangular_signature_optimal_stopping.ipynb  ws_orderbook_client_demo.ipynb
mock_apis/: Dockerfile  app.py
mock_apis/data/: binance.json  coinmarketcap.json  kraken.json
python/: api_keys.py  finnhub_helper.py  rust_bridge.py
python/backtest/: core.py
python/connectors/: README.md  __init__.py  authenticated.py  finnhub.py
python/strategies/: __init__.py  definitions.py  executor.py
python_client/: backtest.py  execution.py
python_client/strategies/: mm_imbalance.py
rust_connector/: Cargo.toml
rust_connector/src/: lib.rs
rust_core/: Cargo.toml
rust_core/aggregator/: Cargo.toml
rust_core/aggregator/src/: lib.rs
rust_core/connectors/binance/: Cargo.toml
rust_core/connectors/binance/src/: rest.rs  ws.rs
rust_core/connectors/coinbase/: Cargo.toml
rust_core/connectors/coinbase/src/: rest.rs  ws.rs
rust_core/connectors/coingecko/: Cargo.toml
rust_core/connectors/coingecko/src/: rest.rs
rust_core/connectors/common/: Cargo.toml  Cargo.toml.bak
rust_core/connectors/common/src/: errors.rs  types.rs
rust_core/connectors/kraken/: Cargo.toml
rust_core/connectors/kraken/src/: rest.rs  ws.rs
rust_core/signature_optimal_stopping/: Cargo.toml
rust_core/signature_optimal_stopping/src/: lib.rs
rust_core/signature_optimal_stopping_py/: Cargo.toml
rust_core/signature_optimal_stopping_py/src/: lib.rs
rust_core/src/: lib.rs  matching_engine.rs  orderbook.rs  signature_optimal_stopping.rs
rust_core/src/strategies/: mm.rs  mod.rs  pairs.rs
rust_core/src/stream/: mod.rs  processor.rs  ws_client.rs
rust_core/tests/: orderbook_tests.rs
rust_python_bindings/: Cargo.toml
rust_python_bindings/src/: lib.rs
scripts/: enrich_notebooks.py  start_jupyter.sh  update_notebooks_finnhub.py
tests/: test_backtest.py  test_bindings.py
