[package]
name = "rust_connector"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_connector"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module", "auto-initialize"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
futures-util = "0.3"