[package]
name = "signature_optimal_stopping_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "signature_optimal_stopping_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module", "auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
signature_optimal_stopping = { path = "../signature_optimal_stopping" }
log = "0.4"
env_logger = "0.10"
