[package]
name = "connector_coingecko"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
connectors_common = { path = "../common" }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
